<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="ttable">TimeTable</string>
    <string name="more">More...</string>
     <string name="settings">Settings</string>
    <string name="app_name">Sangwon Highschool</string>
    <string name="homepage">PC Version</string>
	<string name="info">About</string>
    <string name="food">Weekly Food menu</string>
    <string name="classsite">Class site</string>
    <string name="grade1">Grade 1</string>
    <string name="grade2">Grade 2</string>
    <string name="grade3">Grade 3</string>
    <string name="g1c1">1&#8211;1</string>
    <string name="g1c2">1&#8211;2</string>
    <string name="g1c3">1&#8211;3</string>
    <string name="g1c4">1&#8211;4</string>
    <string name="g1c5">1&#8211;5</string>
    <string name="g1c6">1&#8211;6</string>
    <string name="g1c7">1&#8211;7</string>
    <string name="g1c8">1&#8211;8</string>
    <string name="g1c9">1&#8211;9</string>
    <string name="g1c10">1&#8211;10</string>
    <string name="g2c1">2&#8211;1</string>
    <string name="g2c2">2&#8211;2</string>
    <string name="g2c3">2&#8211;3</string>
    <string name="g2c4">2&#8211;4</string>
    <string name="g2c5">2&#8211;5</string>
    <string name="g2c6">2&#8211;6</string>
    <string name="g2c7">2&#8211;7</string>
    <string name="g2c8">2&#8211;8</string>
    <string name="g2c9">2&#8211;9</string>
    <string name="g2c10">2&#8211;10</string>
    <string name="g3c1">3&#8211;1</string>
    <string name="g3c2">3&#8211;2</string>
    <string name="g3c3">3&#8211;3</string>
    <string name="g3c4">3&#8211;4</string>
    <string name="g3c5">3&#8211;5</string>
    <string name="g3c6">3&#8211;6</string>
    <string name="g3c7">3&#8211;7</string>
    <string name="g3c8">3&#8211;8</string>
    <string name="g3c9">3&#8211;9</string>
    <string name="g3c10">3&#8211;10</string>
    <string name="flout">Facility layout</string>
    <string name="maintitle">Menu</string>
    <string name="notice">Notice</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="schinfo">School Introduction</string>
    <string name="symbol">Symbol</string>
    <string name="schsong">Song</string>
    <string name="status">Status</string>
    <string name="location">Location</string>
	<string name="str_done">Done</string>
	<string name="load">Loading</string>
	<string name="tt_error">Loading Error!</string>
	<string name="share">Share</string>
	<string name="appver">App Version</string>
	<string name="version">3.0.1 build 1</string>
	<string name="developer">Developer</string>
	<string name="login">Log-in</string>
	<string name="License">License</string>
	<string name="opensource">Open Source</string>
	<string name="opensource_link">http://github.com/SpaceDroidF/Application_SangwonHighschool</string>
	<string name="builddate_title">Build Date</string>
	<string name="builddate">Sun Mar 16 18:29:01 KST 2014</string>
    </resources>
