<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
<!-- Custom Action Bar for Android 2.0.1+ -->

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="47dip"
    android:background="#ff2a2a2a"
    android:orientation="horizontal" >

    <ImageView
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:padding="7dp"
        android:src="@drawable/ic_launcher"
        tools:ignore="ContentDescription" />

    <TextView
                android:layout_width="fill_parent"
        android:layout_height="43dp"
                android:padding="10dp"
                android:textSize="17sp"
                android:textColor="#ffffffff"
                android:text="@string/app_name"/>
</LinearLayout>

            <LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="20dip"
		android:orientation="vertical"
		android:background="#ff2a2a2a">
   <TextView
	   android:textColor="#ffffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_gravity="center"
        android:text="@string/classsite"/>
</LinearLayout>
    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ScrollView
                    android:id="@+id/imagescroll"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    tools:ignore="UselessParent" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:id="@+id/tab1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:text="@string/grade1" >

                            <Button
                                android:id="@+id/g1c1"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g1c1" />

                            <Button
                                android:id="@+id/g1c2"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g1c2" />

                            <Button
                                android:id="@+id/g1c3"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g1c3" />

                            <Button
                                android:id="@+id/g1c4"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g1c4" />

                            <Button
                                android:id="@+id/g1c5"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g1c5" />

                            <Button
                                android:id="@+id/g1c6"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g1c6" />

                            <Button
                                android:id="@+id/g1c7"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g1c7" />

                            <Button
                                android:id="@+id/g1c8"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g1c8" />

                            <Button
                                android:id="@+id/g1c9"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g1c9" />

                            <Button
                                android:id="@+id/g1c10"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g1c10" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/tab2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical" >

                            <Button
                                android:id="@+id/g2c1"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g2c1" />

                            <Button
                                android:id="@+id/g2c2"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g2c2" />

                            <Button
                                android:id="@+id/g2c3"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g2c3" />

                            <Button
                                android:id="@+id/g2c4"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g2c4" />

                            <Button
                                android:id="@+id/g2c5"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g2c5" />

                            <Button
                                android:id="@+id/g2c6"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g2c6" />

                            <Button
                                android:id="@+id/g2c7"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g2c7" />

                            <Button
                                android:id="@+id/g2c8"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g2c8" />

                            <Button
                                android:id="@+id/g2c9"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g2c9" />

                            <Button
                                android:id="@+id/g2c10"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g2c10" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/tab3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical" >

                            <Button
                                android:id="@+id/g3c1"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g3c1" />

                            <Button
                                android:id="@+id/g3c2"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g3c2" />

                            <Button
                                android:id="@+id/g3c3"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g3c3" />

                            <Button
                                android:id="@+id/g3c4"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g3c4" />

                            <Button
                                android:id="@+id/g3c5"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g3c5" />

                            <Button
                                android:id="@+id/g3c6"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g3c6" />

                            <Button
                                android:id="@+id/g3c7"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g3c7" />

                            <Button
                                android:id="@+id/g3c8"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g3c8" />

                            <Button
                                android:id="@+id/g3c9"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g3c9" />

                            <Button
                                android:id="@+id/g3c10"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/g3c10" />
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>