<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#ffffffff">
    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
<!-- Custom Action Bar for Android 2.0.1+ -->

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="47dip"
    android:background="#ff2a2a2a"
    android:orientation="horizontal" >

    <ImageView
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:padding="7dp"
        android:src="@drawable/ic_launcher"
        tools:ignore="ContentDescription" />

    <TextView
                android:layout_width="fill_parent"
        android:layout_height="43dp"
                android:padding="10dp"
                android:textSize="17sp"
                android:textColor="#ffffffff"
                android:text="@string/app_name"/>
</LinearLayout>

            <LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="20dip"
		android:orientation="vertical"
		android:background="#ff2a2a2a">
   <TextView
	   android:textColor="#ffffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_gravity="center"
        android:text="@string/food"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/imagescroll"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            tools:ignore="UselessParent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                tools:ignore="ScrollViewSize" >

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#ff000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="중식:"
                    android:textColor="#ff000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#ff000000"
                    android:textSize="20sp" />
                

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="석식:"
                    android:textColor="#ff000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/dinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#ff000000"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="*급식표는 매주 일요일마다 자동 업데이트됩니다."
                        android:textColor="#ffd43636"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    
    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#ff2a2a2a" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/mon"
                android:layout_width="65dip"
                android:layout_height="30dip"
                android:background="#ff2a2a2a"
                android:text="@string/mon"
                android:textColor="#ffffffff" />

            <Button
                android:id="@+id/tue"
                android:layout_width="65dip"
                android:layout_height="30dip"
                android:background="#ff2a2a2a"
                android:text="@string/tue"
                android:textColor="#ffffffff" />

            <Button
                android:id="@+id/wed"
                android:layout_width="65dip"
                android:layout_height="30dip"
                android:background="#ff2a2a2a"
                android:text="@string/wed"
                android:textColor="#ffffffff" />

            <Button
                android:id="@+id/thu"
                android:layout_width="65dip"
                android:layout_height="30dip"
                android:background="#ff2a2a2a"
                android:text="@string/thu"
                android:textColor="#ffffffff" />

            <Button
                android:id="@+id/fri"
                android:layout_width="65dip"
                android:layout_height="30dip"
                android:background="#ff2a2a2a"
                android:text="@string/fri"
                android:textColor="#ffffffff" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>